# railway-rl-lab

./: .claudemd  .dockerignore  .gitignore  LICENSE.txt  README.md  README_ARCHIVE.md  pyproject.toml  requirements.txt
.claude/: settings.json
docker/: Dockerfile.gtfs_rt_ingest
docs/: license.md  todo.md
scripts/: init_project.sh  run_gtfs_rt_ingestion.sh
src/: train.py
src/archive/: ingest_gtfs_rt_aio.py
src/archive/overpass/: railway_test_tokyo.py
src/gnn/: graph_state_encoder.py
src/graph/: build_pyg.py
src/gtfs/: ingest_gtfs_rt.py
src/gtfs_rt/: ingest_gtfs_rt.py
src/osm/: osm.py  parse_overpass.py
src/overpass/: railway_dresden.py
src/rl/: agent.py  q_network.py  railway_env_test.py
