[project]
name = "opendata_rl_railway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.15.0",
    "geopandas>=0.14.0",
    "overpy>=0.6",
    "pandas>=2.0.0",
    "pydeck>=0.8.0",
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "streamlit>=1.30.0",
    "streamlit-folium>=0.15.0",
]
