[project]
name = "opendata_rl_railway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "boto3>=1.43.37",
    "folium>=0.15.0",
    "geopandas>=0.14.0",
    "gtfs-realtime-bindings>=2.0.0",
    "gymnasium>=1.3.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.8",
    "mapclassify>=2.10.0",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "overpy>=0.6",
    "pandas>=2.0.0",
    "protobuf>=7.35.0",
    "pyarrow>=24.0.0",
    "pydeck>=0.8.0",
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "streamlit>=1.30.0",
    "streamlit-folium>=0.15.0",
    "torch>=2.12.1",
    "torch-geometric>=2.8.0",
]
